<resources>
    <string name="app_name">calc-imc</string>
    <string name="hello_word">Hello World!</string>
    <string name="ola_radio">Ola radio</string>
    <string name="ola_checkbox">Ola checkBox</string>
    <string name="imc">IMC</string>
    <string name="peso_kg">Peso (ex: 65.8 Kg)</string>
    <string name="calcular">Calcular</string>
    <string name="altura">altura(ex:1.78m)</string>
</resources>